# OpenGL-Skeleton-Framework

./: .gitignore  CMakeLists.txt  CODING_STANDARDS.md  README.md
cmake/: BuildOpenISS.cmake  BuildSTB.cmake
docs/: README.md
docs/sphinx/: conf.py  index.rst
src/: buffer.cpp  buffer.h  camera.cpp  camera.h  color.h  light_data.h  loader_obj.h  main.cpp  material.h  mesh.h  module.h  module_axis.h  module_fps_camera.h  module_grid.h  module_rendering_mode.h  module_scene_graph.h  module_world_orientation.h  node.h  node_bone.h  node_character.h  node_joint.h  node_letter.h  node_model.h  node_skeleton.h  resources.cpp  resources.h  resources_alphabet.cpp  resources_alphabet.h  shader.cpp  shader.h  test_alphabet.h  test_scene_graph.h  test_unit_cube.h  test_vertex_drawing.h  texture.cpp  texture.h  world.cpp  world.h
src/adapters/: OISkeletonTrackerAdapter.h
src/modules/: assignment1.h  assignment2.h  assignment3.h  fps_camera.h  ground_grid.h  imgui_integration.cpp  imgui_integration.h  module_manager_ui.h  origin_axis.h  rendering_mode.h  scene_graph.cpp  scene_graph.h  shadows.h  world_orientation.h
src/shaders/: color.vert  lit.frag  lit.vert  shader.frag  shader.vert  shadow_cast.frag  shadow_cast.vert  shadowed.frag  shadowed.vert  textured.frag  textured.vert
src/tests/: test_alphabet.h  test_half_cylinder.h  test_imgui_integration.h  test_lit_shader.h  test_loader_obj.h  test_multi_lights.h  test_openiss.h  test_scene_graph.h  test_shadows.h  test_shape_meshes.h  test_texture.h  test_unit_cube.h  test_vertex_drawing.h
